# Navigator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint_and_test.yml
docs/intro/: decimeter_triangulation.ipynb  epoch_directory_tutorial.ipynb  extended_kalman_filter_gps.ipynb  intro_parsing_and_interpolation.ipynb  intro_sp3_orbit.ipynb  intro_triangulation.ipynb  kalman_net_design.ipynb  pekf_gps.ipynb  radar_sim_kalman_net.ipynb  unscented_kalman_filter_gps.ipynb
docs/reports/paper-2024/: gnssnet_journal.tex
docs/reports/report-dec-2023/: summary_dec23.ipynb
docs/reports/report-jan-2024/: summary_jan24.ipynb
docs/resources/: course_links.txt
planning/modelling/activity/: processing.uxf
planning/modelling/modules/parselib/: baseparse_class.uxf  baseparse_sterotype.uxf  tree.uxf
planning/modelling/modules/satlib/: tree.uxf
planning/modelling/usecase/: usecase.uxf
src/navigator/: __init__.py
src/navigator/core/: __init__.py
src/navigator/core/satellite/: __init__.py  satellite.py
src/navigator/core/triangulate/: __init__.py  triangulate.py
src/navigator/dispatch/: __init__.py  base_dispatch.py
src/navigator/dispatch/idispatch/: __init__.py  idispatch.py
src/navigator/download/: __init__.py  base_download.py
src/navigator/download/ftpserver/: __init__.py  ftpfs_server.py  mount_server.py
src/navigator/download/idownload/: __init__.py  idownload.py
src/navigator/epoch/: __init__.py  epoch.py  epoch_collection.py  epoch_directory.py  epochfragment.py
src/navigator/epoch/fragments/: __inti__.py  gps_framgents.py
src/navigator/epoch/loaders/: __init__.py  fetchers.py  rinex_loader.py
src/navigator/epoch/tensor_adapter/: gps_tensor_adapter.py
src/navigator/filters/: __init__.py
src/navigator/filters/extended/: __init__.py  ekf.py  ekf_functional_interface.py
src/navigator/filters/kalman_nets/: kalman_net_base.py
src/navigator/filters/unscented/: __init__.py  ukf_functional_interface.py
src/navigator/logger/: __init__.py
src/navigator/neural/: __init__.py
src/navigator/neural/adapters/: __init__.py
src/navigator/neural/architectures/: __init__.py
src/navigator/neural/datasets/: __init__.py
src/navigator/neural/interface/: __init__.py  error_state_kalman_net.py  robust_triangulation_kalman_net.py  triangulation_filter.py
src/navigator/parse/: __init__.py  base_parse.py
src/navigator/parse/iparse/: __init__.py  base_iparse.py
src/navigator/satlib/: __init__.py
src/navigator/satlib/iephm/: __init__.py  iephm.py
src/navigator/satlib/satellite/: __init__.py  satellite.py
src/navigator/satlib/sp3/: __init__.py  sp3.py
src/navigator/satlib/triangulate/: __init__.py  triangulate.py
src/navigator/utility/: __init__.py
src/navigator/utility/data/: __init__.py  directory.py  epoch_directory.py  igs_daily_data_directory.py
src/navigator/utility/data_tools/: directory.py  standerd_directory.py
src/navigator/utility/epoch/: __init__.py  epoch.py  epochfragment.py
src/navigator/utility/ftpserver/: __init__.py  ftpfs_server.py  mount_server.py
src/navigator/utility/igs/: __init__.py  igs_network.py
src/navigator/utility/igs_network/: igs_network.py
src/navigator/utility/logger/: __init__.py  logger.py
src/navigator/utility/matcher/: __init__.py  fragment_matcher.py  matcher.py  sp3_matcher.py
src/navigator/utility/mics/: __init__.py  dynamic_docstring.py
src/navigator/utility/scripts/: cddis_download.py  dir_ops.py  gps_traingulate.py  ublox_reciever.py
src/navigator/utility/simulator/: __init__.py  reciever_simulator.py  satellite_simulator.py
src/navigator/utility/tracker/: __init__.py  history_tracker.py
src/navigator/utility/transforms/: __init__.py  coordinate_transforms.py  crs_to_trs_rotations.py
src/navigator/utility/ublox/: __init__.py  commands.py  controller.py  profile.py
src/navigator/utils/: __init__.py
src/navigator/utils/filter_analysis/: __init__.py  kf_residuals.py
tests/: __init__.py  common_fixtures.py
tests/download/: aus_gov_download_test.py  test_nasa_download.py  test_sp3_download.py
tests/gps_ephm/: test_ephemeris_algorathim.py  test_parsing_and_interpolation.py
tests/parse/: test_iparse_interface.py  test_sp3_gps_parse.py
tests/parse/rinexsamples/: YELL00CAN_R_20231841500_01H_30S_MO.crx  YELL00CAN_R_20231841500_01H_MN.rnx
tests/rinexsamples/: BRST00FRA_R_20230340900_01H_30S_MO.crx  BRST00FRA_R_20230340900_01H_MN.rnx  SAFRAN_SIM_SAMPE.csv  SkydelRINEX_S_20242100_7200S_GN.rnx  igs19663.sp3.Z
tests/rinexsamples/rnx/: AMC400USA_R_20230391700_01H_30S_MO.crx  AMC400USA_R_20230391700_01H_GN.rnx
tests/rinexsamples/sim/: SkydelRINEX_S_20242100_7200S_MO.rnx  Skydel_reciever_pos.csv
tests/triangulate/: test_ekf.py  test_gps_iterative_traingulation.py  test_gps_triangulation_on_sim_dataset.py  test_preprocessor.py
tests/utility/: test_epoch_class.py  test_igs_network.py  test_matcher_class.py  test_sp3_matcher.py
(+227 files in other folders)
