[tool.poetry]
name = "navigator"
version = "0.1.0"
description = "A RINEX processing library"
authors = ["NischalBhattarai <nbhattarai@crimson.ua.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<3.13"
georinex = "^1.16.1"
scipy = "^1.11.2"
numpy = "^1.25.2"
pyproj = "^3.6.1"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.288"
pytest = "^7.4.2"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
lxml = "^4.9.3"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select =["E", "F", "I", "UP", "ANN", "ARG", "D", "RET", "TCH"]
exclude = ["tests", "docs", "*test_*"]
src =['./ftrain']
# Ignore long lines and self annotations 
ignore =['ANN101', 'E501', 'ANN002', 'ANN003']

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"


[tool.black]
use-single-quotes = false
line-length = 88
skip-string-normalization = true
target-version = ["py310"]

[tool.black.paths]
include = ["./src/navigator"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]