[tool.poetry]
name = "navigator"
version = "0.1.0"
description = "A RINEX processing library"
authors = ["NischalBhattarai <nbhattarai@crimson.ua.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
rinex3-download-nasa = "navigator.utility.scripts.cddis_download:main"
rinex3-dir-ops = "navigator.utility.scripts.dir_ops:main"
triangulate = "navigator.utility.scripts.gps_traingulate:main"

[tool.poetry.dependencies]
python =  ">=3.10,<3.12"
georinex = "^1.16.1"
scipy = "^1.11.2"
numpy = "^1.25.2"
pyproj = "^3.6.1"
seaborn = "^0.13.0"
requests = "^2.31.0"
click = "^8.1.7"
tqdm = "^4.66.1"
fs = "^2.4.16"
numba = "^0.58.1"
filterpy = "^1.4.5"
pdoc = "^14.3.0"
matplotlib = "^3.8.0"
notebook = "^6.4.4"
rise = "^5.6.1"
assertpy = "^1.1"
pytorch-lightning = "^2.2.0.post0"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipykernel = "^6.25.2"
lxml = "^4.9.3"
html5lib = "^1.1"
plotly = "^5.18.0"
nbformat = "^5.9.2"
sympy = "^1.12"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select =["E", "F", "I", "UP", "ANN", "ARG", "D", "RET", "TCH"]
exclude = ["tests", "docs", "*test_*"]
src =['./src/navigator']
# Ignore long lines and self annotations 
ignore =['ANN101', 'E501', 'ANN002', 'ANN003']

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "D104"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"


[tool.black]
use-single-quotes = false
line-length = 88
skip-string-normalization = true
target-version = ["py310"]

[tool.black.paths]
include = ["./src/navigator"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
disable_error_code = "import-untyped"
